リンクの作成

--- a/04.画像を表示させよう/index.html
+++ b/04.画像を表示させよう/index.html
@@ -1,1 +1,4 @@
 <!-- ここに画像を3つ追加してください -->
+ <img src="dolfin.png" , alt="画像1", loading="lazy">
+ <img src="panda.png" , alt="画像2", loading="lazy">
+ <img src="tiger.png" , alt="画像3", loading="lazy">
