ページ内リンクの作成

--- a/07.リストの使い分けをマスターしよう/index.html
+++ b/07.リストの使い分けをマスターしよう/index.html
@@ -3,3 +3,14 @@
     目次
   </div>
   <!-- ここに目次用のリストを作ってください -->
+   <ol>
+    <ls>見だし1</ls>
+    <ls>見だし2
+      <ol>
+      <ls>見だし2-1</ls>
+      <ls>見だし2-2</ls>
+      </ol>
+      </ls>
+    </ls>
+   </ol>
+    
